# serial-interface-mac

./: Build_Instructions.md  CMakeLists.txt  README.md  SerialMACProtocolv1.md  SerialMACProtocolv2.md  Usage.md
src/: CMakeLists.txt  sf_serialmac.c  sf_serialmac.h
test/: CMakeLists.txt  main.cpp  mocked_mac_callbacks.cpp  mocked_mac_callbacks.h  sf_serialmac_configurable_init_suite.cpp  sf_serialmac_init_suite.cpp  sf_serialmac_inverted_length_rx_suite.cpp  sf_serialmac_inverted_length_test.cpp  sf_serialmac_inverted_length_test.h  sf_serialmac_inverted_length_tx_suite.cpp  sf_serialmac_no_configurable_init_suite.cpp  sf_serialmac_no_inverted_length_rx_suite.cpp  sf_serialmac_no_inverted_length_test.cpp  sf_serialmac_no_inverted_length_test.h  sf_serialmac_no_inverted_length_tx_suite.cpp  sf_serialmac_test.cpp  sf_serialmac_test.h  sf_serialmac_tx_suite.cpp
